# mcp-tutorial-python

./: .env-exmaple  .gitignore  README.md  main.py  pyproject.toml
ch01/: 01_weather-client.py  01_weather-server.py
ch03/01_simple-adder/: client.py  server.py
ch03/03_llm-client/: client.py  server.py
ch03/04_vscode/: README.md  how-to-run.md
ch03/05_sse-server/: 05_sse-server.md  README-python.md  README.md  server-fastapi.py  server.py
ch03/06_http-streaming/: 06_how-to-work.md  README.md  client.py  server.py  welcome.html
ch03/07_ai-toolkit/Calculator/: README.md  pyproject.toml
ch03/07_ai-toolkit/Calculator/.aitk/: mcp.json
ch03/07_ai-toolkit/Calculator/src/: server.py
ch04-implementation/: client.py  server.py
ch05-advanced-topicss/02_mcp-multi-modality/: multi-modal.py  readme.md
ch05-advanced-topicss/04_mcp-root-contexts/: context-advanced-server.py  context-complete-guide.md  context-simple-server.py  context-usage.md  elicitation-guide.md  elicitation-server.py  how-to-run.md  readme-Korean.md  readme.md  test-advanced-context.py  test-elicitation.py  test-simple-context.py
ch99-reference-servers/git-server/: README.md  how-to-run.md  pyproject.toml  test_git_client.py  web_git_tester.py
ch99-reference-servers/git-server/src/mcp_server_git/: __init__.py  __main__.py  server.py
ch99-reference-servers/time-server/: README.md  how-to-run.md  pyproject.toml  test_time_client.py
ch99-reference-servers/time-server/src/mcp_server_time/: __init__.py  __main__.py  server.py
